--- a/index.html
+++ b/index.html
@@ -2,13 +2,31 @@
 <html>
   <head>
     <title>Index</title>
+    <!-- CDN link --><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
-    <a href="education.html" target="myframe"> Education </a> &nbsp; &nbsp;
-    <a href="contactUs.html" target="myframe"> CONTACT US </a>
-    <br />
-    <br />
+    <header>
+      <strong> Mobile: 987867 5645</strong>  &nbsp; &nbsp; &nbsp; &nbsp;
+      <strong> Email: xyz@gmail.com </strong>
+    </header>
 
-    <iframe width="1050px" height="600px" name="myframe"> </iframe>
+    <nav>
+      <a href="#" target="myframe">Home </a> &nbsp; &nbsp;
+      <a href="#" target="myframe"> Tech Stack</a> &nbsp; &nbsp;
+      <a href="education.html" target="myframe"> Education </a> &nbsp; &nbsp;
+      <a href="contactUs.html" target="myframe"> CONTACT US </a> &nbsp; &nbsp;
+    </nav>
+
+    <br />
+   
+  
+
+    <iframe width="1050px" height="550px" name="myframe"> </iframe>
+    <br />
+    <footer>
+      <strong> Follow Me: &nbsp; &nbsp; </strong>
+      <a href="https://www.instagram.com/accounts/login/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> </a>
+      
+    </footer>
   </body>
 </html>
