added achievements and hobbies
added achievements and hobbies

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <a href="#" target="myframe">Home </a> &nbsp; &nbsp;
       <a href="#" target="myframe"> Tech Stack</a> &nbsp; &nbsp;
       <a href="education.html" target="myframe"> Education </a> &nbsp; &nbsp;
+      <a href="personalDetails.html" target="myframe"> Personal </a> &nbsp; &nbsp;
+      <a href="hobbies.html" target="myframe"> Hobbies </a> &nbsp; &nbsp;
+      <a href="achievements.html" target="myframe"> Achievements </a> &nbsp; &nbsp;
       <a href="contactUs.html" target="myframe"> CONTACT US </a> &nbsp; &nbsp;
     </nav>
 
@@ -25,8 +28,10 @@
     <br />
     <footer>
       <strong> Follow Me: &nbsp; &nbsp; </strong>
-      <a href="https://www.instagram.com/accounts/login/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> </a>
-      
+      <a href=" https://www.facebook.com/" target="_blank"> <i class="fa fa-facebook-official" aria-hidden="true"></i></a>  &nbsp; &nbsp; &nbsp; &nbsp;
+      <a href="https://www.instagram.com/accounts/login/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i> </a>  &nbsp; &nbsp; &nbsp; &nbsp;
+      <a href="https://telegr.am/user_mgt/login" target="_blank"> <i class="fa fa-telegram" aria-hidden="true"></i> </a>  &nbsp; &nbsp; &nbsp; &nbsp;
+      <a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZW4ifQ%3D%3D%22%7D" target="_blank"> <i class="fa fa-twitter" aria-hidden="true"></i></a>  &nbsp; &nbsp; &nbsp; &nbsp;
     </footer>
   </body>
 </html>
