--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html>
   <head>
     <title>Index</title>
-    <!-- CDN link --><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- CDN link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
+      <strong> Name: Bhagyashri Birajdar </strong>  &nbsp; &nbsp; &nbsp; &nbsp;
       <strong> Mobile: 987867 5645</strong>  &nbsp; &nbsp; &nbsp; &nbsp;
       <strong> Email: xyz@gmail.com </strong>
     </header>
 
     <nav>
-      <a href="#" target="myframe">Home </a> &nbsp; &nbsp;
-      <a href="#" target="myframe"> Tech Stack</a> &nbsp; &nbsp;
+      <a href="home.html" target="myframe">Home </a> &nbsp; &nbsp;
+      <a href="techStack.html" target="myframe"> Tech Stack</a> &nbsp; &nbsp;
       <a href="education.html" target="myframe"> Education </a> &nbsp; &nbsp;
       <a href="personalDetails.html" target="myframe"> Personal </a> &nbsp; &nbsp;
       <a href="hobbies.html" target="myframe"> Hobbies </a> &nbsp; &nbsp;
@@ -24,7 +26,7 @@
    
   
 
-    <iframe width="1050px" height="550px" name="myframe"> </iframe>
+    <iframe width="1050px" height="550px" name="myframe" src="home.html"> </iframe>
     <br />
     <footer>
       <strong> Follow Me: &nbsp; &nbsp; </strong>
