added CSS properties using selectors
added CSS properties using selectors

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
   <head>
     <title>Index</title>
+    <style>
+      strong
+      {
+        color:purple;
+        background-color: palegreen;
+      }
+      </style>
     <!-- CDN link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
