--- a/home.html
+++ b/home.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Professional Summary :</title>
+        <title> HOME </title>
+        <style>
+        .heading{
+          color:blue;
+          background-color: aqua;
+        }
+        #ang
+        {
+            color:brown;
+        }
+        li
+        {
+            color: darkgreen;
+            background-color: rgb(234, 205, 248);
+        }
+    </style>
     </head>
     <body>
-        <h3> Professional Summary : </h3>
+        <h3 class="heading"> Career objective :</h3>
+        <p> TO WORK IN ORGANIZATION WHERE I CAN LEARN AND GROW MY SKILLS AND HELP ORGANIZATIONAL GROWTH. </p>
+        <h3 class="heading"> Professional Summary : </h3>
         <ul>
-            <li> Having 5 years of experience in developing single page web applications using Angular 13,HTML5,CSS3,Bootstrap5,Javascript,ES6,Typescript</li>
+            <li> Having 5 years of experience in developing single page web applications using <span id="ang"Angular 8></span> </span>,HTML5,CSS3,Bootstrap5,Javascript,ES6,Typescript</li>
             <li> Experience on working with version control system-GIT and GitHub </li>
             <li> Experience on working with JIRA for user stories and bug tracking </li>
             <li> Strong debugging and troubleshooting code experience using Chrome developer tool </li>
